# csv_me

./: .gitignore  CLAUDE.md  plan.md  plan_improvements.md  plan_manual_edit.md  plan_split_join.md  plan_squash.md  pyproject.toml  squash_plan.md  test_sample.csv
csv_me/: __init__.py  __main__.py  cli.py  conditions.py  logger.py  menu.py  session.py
csv_me/features/: find_replace.py  join_csvs.py  jump_back.py  manual_edit.py  normalize_cols.py  normalize_currency.py  normalize_phones.py  remove_columns.py  remove_duplicates.py  remove_rows.py  sort.py  split_column.py  split_join_rows.py  squash.py
